--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,9 +33,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-#      - name: login to registry
+      - name: login to registry
+        run: docker login docker.pkg.github.com
 #        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin containers.redpill-linpro.com
       - name: build container
         run: docker build . --tag champagne_coding:latest
-        
+      - name: check container
+        run docker run -ti champagne_coding ls -la
         
