test login github docker registry

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -39,5 +39,5 @@ jobs:
       - name: build container
         run: docker build . --tag champagne_coding:latest
       - name: check container
-        run docker run -ti champagne_coding ls -la
+        run: docker run -ti champagne_coding ls -la
         
