--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,9 +40,11 @@ jobs:
           username: $GITHUB_ACTOR
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: build container
-        run: docker build . --tag champagne_coding:latest
+        run: |
+          docker build . --tag champagne_coding:latest
+          echo $DOCKER_CONFIG
       - name: check container
-        run: docker run -ti champagne_coding ls -la
+        run: docker run champagne_coding ls -la
       - name: push container to local registry        
         run: docker push $GITHUB_REPOSITORY:latest
 
