test login github docker registry

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,30 +3,30 @@ name: Test CI
 on: [push]
 
 jobs:
-  test_the_code:
+  # test_the_code:
 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6]
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       python-version: [3.6]
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r prod/requirements.txt
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Set up Python ${{ matrix.python-version }}
+  #     uses: actions/setup-python@v1
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #   - name: Install dependencies
+  #     run: |
+  #       python -m pip install --upgrade pip
+  #       pip install -r prod/requirements.txt
+  #   - name: Lint with flake8
+  #     run: |
+  #       pip install flake8
+  #       # stop the build if there are Python syntax errors or undefined names
+  #       flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+  #       # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+  #       flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
 
   build_docker:
@@ -42,9 +42,7 @@ jobs:
       - name: build container
         run: |
           docker build . --tag champagne_coding:latest
-          echo $DOCKER_CONFIG
-      - name: check container
-        run: docker run champagne_coding ls -la
+      - name: view contents of container
+        run: docker run champagne_coding:latest ls -la
       - name: push container to local registry        
-        run: docker push $GITHUB_REPOSITORY:latest
-
+        run: docker push champagne_coding:latest
