test login github docker registry

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Docker Login
         uses: azure/docker-login@v1
         with:
-          login-server: docker.pkg.github.com
+          login-server: $GH_REGISTRY
           username: $GITHUB_ACTOR
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: build container
@@ -49,5 +49,5 @@ jobs:
         run: docker run champagne_coding:latest ls -la
       - name: push container to local registry        
         run: |
-          docker tag champagne_coding:latest $GH_CONTAINER_TAG
+          docker tag champagne_coding:latest $GH_REGISTRY/$GITHUB_REPOSITORY/champagne_coding:latest
           docker push $GH_CONTAINER_TAG
