--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,13 +37,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build container
-        uses: azure/docker-login@v1
+        name: Check out code
+      - uses: azure/docker-login@v1
+        name: Build container
         with:
           login-server: $GH_REGISTRY
           username: $GITHUB_ACTOR
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: |
+        run: |
           docker build . --tag champagne_coding:latest
           docker run champagne_coding:latest ls -la
           docker tag champagne_coding:latest $GH_REGISTRY/$GITHUB_REPOSITORY/champagne_coding:latest
