--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,9 +40,9 @@ jobs:
         run: docker run champagne_coding:latest ls -la
       - name: Push container
         run: |          
-          echo "$GH_PW" docker login -u $GH_REG --password-stdin
+          echo "$GH_PW" docker login -u $GITHUB_ACTOR --password-stdin
           docker tag champagne_coding:latest $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
           docker push $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
         env:
-          GH_REG: ${{ github.repostitory }}
+          GH_REG: docker.pkg.github.com
           GH_PW: ${{ secrets.GITHUB_TOKEN }}
