--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -34,13 +34,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+
       - name: Build container
         run: docker build . --tag champagne_coding:latest
+
       - name: Check contents of container
         run: docker run champagne_coding:latest ls -la
+
       - name: Push container
         run: |          
-          echo "$GH_PW" docker login -u $GITHUB_ACTOR --password-stdin
+          echo $GH_PW | docker login -u $GITHUB_ACTOR --password-stdin
           docker tag champagne_coding:latest $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
           docker push $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
         env:
