--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,10 +46,16 @@ jobs:
           echo $GH_PW | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin 
           docker tag champagne_coding:latest $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
           docker push $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
-          echo $RL_USER
-          echo $RL_PW
         env:
           GH_REG: docker.pkg.github.com
           GH_PW: ${{ secrets.GITHUB_TOKEN }}
-          RL_USER: ${{ secrets.EMAIL }}
-          RL_PW: ${{ secrets.PASSWORD }}
+
+      - name: Login to OpenShift
+        uses: redhat-developer/openshift-actions@v1.1
+        with:
+          version: 'latest'
+          openshift_server_url: paas.redpill-linpro.com
+          parameters: { 'username': "${{ secrets.EMAIL }}", 'password': "${{ secrets.PASSWORD }}"}
+        cmd: |
+          oc whoami -t
+          
