--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -41,14 +41,14 @@ jobs:
       - name: Check contents of container
         run: docker run champagne_coding:latest ls -la
 
-      - name: Push container
-        run: |
-          echo $GH_PW | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin 
-          docker tag champagne_coding:latest $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
-          docker push $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
-        env:
-          GH_REG: docker.pkg.github.com
-          GH_PW: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Push container
+#        run: |
+#          echo $GH_PW | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin 
+#          docker tag champagne_coding:latest $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
+#          docker push $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
+#        env:
+#          GH_REG: docker.pkg.github.com
+#          GH_PW: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to OpenShift
         uses: redhat-developer/openshift-actions@v1.1
@@ -58,4 +58,6 @@ jobs:
           parameters: '{ "username": "${{ secrets.EMAIL }}", "password": "${{ secrets.PASSWORD }}"}'
           cmd: |
             oc whoami -t
-          
+            docker tag champagne_coding:latest docker-registry-default.apps.redpill-linpro.com/champagne-coding/champ
+            docker login -u default -p $(oc whoami -t) docker-registry-default.apps.redpill-linpro.com
+            docker push docker-registry-default.apps.redpill-linpro.com/champagne-coding/champ
