--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,34 +1,8 @@
-name: CI pipeline for the predictor
+name: CI pipeline
 
 on: [push]
 
 jobs:
-  # test_the_code:
-
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       python-version: [3.6]
-
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Set up Python ${{ matrix.python-version }}
-  #     uses: actions/setup-python@v1
-  #     with:
-  #       python-version: ${{ matrix.python-version }}
-  #   - name: Install dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       pip install -r prod/requirements.txt
-  #   - name: Lint with flake8
-  #     run: |
-  #       pip install flake8
-  #       # stop the build if there are Python syntax errors or undefined names
-  #       flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-  #       # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-  #       flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-
   build_docker:
     runs-on: ubuntu-latest
     steps:
@@ -56,8 +30,7 @@ jobs:
           version: 'latest'
           openshift_server_url: paas.redpill-linpro.com
           parameters: '{ "username": "${{ secrets.EMAIL }}", "password": "${{ secrets.PASSWORD }}"}'
-          cmd: |
-            oc whoami -t
+          run: |            
             docker tag champagne_coding:latest docker-registry-default.apps.redpill-linpro.com/champagne-coding/champ
             docker login -u default -p $(oc whoami -t) docker-registry-default.apps.redpill-linpro.com
             docker push docker-registry-default.apps.redpill-linpro.com/champagne-coding/champ
