--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Test
         run: |
           ./helpers/oc login paas.redpill-linpro.com -u "${{ secrets.EMAIL }}" -p "${{ secrets.PASSWORD }}"
-          docker tag champagne_coding:latest docker-registry-default.apps.redpill-linpro.com/champagne-coding/champ
+          ./helpers/oc project champagne_coding
+          TARGET_NAME=`echo "champagne-coding-${{ secrets.EMAIL }}" | sed -e 's/@example.com//'
+          docker tag champagne_coding:latest docker-registry-default.apps.redpill-linpro.com/champagne-coding/$TARGET_NAME
           docker login -u default -p $(./helpers/oc whoami -t) docker-registry-default.apps.redpill-linpro.com
-          docker push docker-registry-default.apps.redpill-linpro.com/champagne-coding/champ
+          docker push docker-registry-default.apps.redpill-linpro.com/champagne-coding/$TARGET_NAME
