--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,18 +24,10 @@ jobs:
 #          GH_REG: docker.pkg.github.com
 #          GH_PW: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Login to OpenShift
-        uses: redhat-developer/openshift-actions@v1.1
-        with:
-          version: 'latest'
-          openshift_server_url: paas.redpill-linpro.com
-          parameters: '{ "username": "${{ secrets.EMAIL }}", "password": "${{ secrets.PASSWORD }}"}'
-          cmd: |
-            oc whoami -t
-      - name: Test
+      - name: Push image to OpenShift
         run: |
           ./helpers/oc login paas.redpill-linpro.com -u "${{ secrets.EMAIL }}" -p "${{ secrets.PASSWORD }}"
-          ./helpers/oc project champagne_coding
+          ./helpers/oc project champagne-coding
           TARGET_NAME=`echo "champagne-coding-${{ secrets.EMAIL }}" | sed -e 's/@example.com//'
           docker tag champagne_coding:latest docker-registry-default.apps.redpill-linpro.com/champagne-coding/$TARGET_NAME
           docker login -u default -p $(./helpers/oc whoami -t) docker-registry-default.apps.redpill-linpro.com
