--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,25 +10,26 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build container
-        run: docker build . --tag champagne_coding:latest
+        run: docker build . --tag champagne-coding:latest
 
+        # This should typically be a test step
       - name: Check contents of container
-        run: docker run champagne_coding:latest ls -la
+        run: docker run champagne-coding:latest ls -la
 
 #      - name: Push image to GitHub project specific repository
 #        run: |
 #          echo $GH_PW | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin 
-#          docker tag champagne_coding:latest $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
-#          docker push $GH_REG/$GITHUB_REPOSITORY/champagne_coding:latest
+#          docker tag champagne-coding:latest $GH_REG/$GITHUB_REPOSITORY/champagne-coding:latest
+#          docker push $GH_REG/$GITHUB_REPOSITORY/champagne-coding:latest
 #        env:
 #          GH_REG: docker.pkg.github.com
 #          GH_PW: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push image to OpenShift
+      - name: Push image to OpenShift @ Redpill Linpro
         run: |
           ./helpers/oc login paas.redpill-linpro.com -u "${{ secrets.EMAIL }}" -p "${{ secrets.PASSWORD }}"
           ./helpers/oc project champagne-coding
           TARGET_NAME=`echo "champagne-coding-${{ secrets.EMAIL }}" | sed -e 's/@example.com//'`
-          docker tag champagne_coding:latest docker-registry-default.apps.redpill-linpro.com/champagne-coding/$TARGET_NAME
+          docker tag champagne-coding:latest docker-registry-default.apps.redpill-linpro.com/champagne-coding/$TARGET_NAME
           docker login -u default -p $(./helpers/oc whoami -t) docker-registry-default.apps.redpill-linpro.com
           docker push docker-registry-default.apps.redpill-linpro.com/champagne-coding/$TARGET_NAME
